[DOCS] Fix the listed default for ConnectionPool
Related to #87

--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -185,7 +185,7 @@ $client = new Elasticsearch\Client($params);
 $paramDefaults = array(
     'connectionClass'       => '\Elasticsearch\Connections\GuzzleConnection',
     'connectionFactoryClass'=> '\Elasticsearch\Connections\ConnectionFactory',
-    'connectionPoolClass'   => '\Elasticsearch\ConnectionPool\StaticConnectionPool',
+    'connectionPoolClass'   => '\Elasticsearch\ConnectionPool\StaticNoPingConnectionPool',
     'selectorClass'         => '\Elasticsearch\ConnectionPool\Selectors\RoundRobinSelector',
     'serializerClass'       => '\Elasticsearch\Serializers\ArrayToJSONSerializer',
     'sniffOnStart'          => false,
